[package]
name = "poet-sys"
version = "0.1.0"
authors = ["Connor Imes <connor.k.imes@gmail.com>"]
description = "FFI bindings to libpoet"
license = "MIT"
homepage = "https://github.com/libpoet/poet-sys"
repository = "https://github.com/libpoet/poet-sys"
keywords = ["poet", "performance", "optimal", "energy", "toolkit", "feedback", "control", "bindings"]

build = "build.rs"

[dependencies]
libc = "0.2"
